--- a/html/estimate/estimate-detail.html
+++ b/html/estimate/estimate-detail.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Reservation Summary</title>
         <link rel="stylesheet" href="../../css/common/reset.css">
-        <link rel="stylesheet" href="../../css/estimate/estimateDetails.css">
+        <link rel="stylesheet" href="../../css/estimate/estimate-detail.css">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
         <script src="../../js/main/main.js"></script>
     </head>
@@ -17,22 +17,22 @@
                 <p class="bold">견적을 확인하고 싶은 업체를 선택해 주세요.</p>
                 <p>스드메 견적을 간편하게 확인할 수 있어요</p>
             </div>  
-            <div class="tabs">
-                <div class="tab active">스튜디오</div>
-                <div class="tab">드레스</div>
-                <div class="tab">헤어메이크업</div>
+            <div class="tab">
+                <div class="tab-active">스튜디오</div>
+                <div class="tab-content">드레스</div>
+                <div class="tab-content">헤어메이크업</div>
             </div>
             <div class="main-grid">
                 <div class="left-panel">
                     <div class="main">
-                        <img src="../../assets/images/estimateDetails1.png" alt="Studio Image">
+                        <img src="../../assets/images/estimate-detail1.png" alt="Studio Image">
                         <div class="selected">
                             <div class="content-main">
                                 <p class="content-bold">S 스튜디오</p>
                                 <p class="content-address">서울특별시 서초구 신반포로 4길 7</p>
                             </div>
                             <div class="basic-option">
-                                <div class="basicOptionParagraph">
+                                <div class="basic-detail">
                                     <p><strong>기본 옵션</strong></p>
                                     <p>원본 데이터</p>
                                     <p>원본 파일(3장) + 기본 인화 1컷(20R)</p>  
@@ -110,7 +110,7 @@
                     <div class="list">
                         <div class="list-main">
                             <div class="imgg">
-                                <img src="../../assets/images/estimateDetails2.png" alt="목록사진">
+                                <img src="../../assets/images/estimate-detail2.png" alt="목록사진">
                             </div>
                             <div class="pic-right">
                                 <div class="item-title">
@@ -135,13 +135,13 @@
                         </div>
                     </div>
                     <div class="price">
-                        <div class="total1">
+                        <div class="price-regular">
                             <span>정상가</span><span>330,000원</span>
                         </div>
-                        <div class="total2">
+                        <div class="price-discount">
                             <span>쿠폰/포인트 할인가</span><span class="color">-0원</span>
                         </div>
-                        <div class="total3">
+                        <div class="price-total">
                             <span>최종 금액</span><span>330,000원</span>
                         </div>
                         <div class="replay">
@@ -158,9 +158,9 @@
                     <p>실제 결제할 금액을 확인할 수 있으며, Wedder에서는 이에 대해 책임을 지지 않습니다.</p>
                 </div>
                 </div>
-                <div class="buttons">
-                    <button onclick="location.href='estimateCal.html'" class="back">이전</button>
-                    <button onclick="location.href='estimateFinal.html'" class="next">다음으로</button>
+                <div class="btn">
+                    <button onclick="location.href='estimate-calculator.html'" class="back">이전</button>
+                    <button onclick="location.href='estimate-final.html'" class="next">다음으로</button>
                 </div>
             </div>
         </div>
