--- a/html/mypage/myPayment.html
+++ b/html/mypage/myPayment.html
@@ -31,80 +31,108 @@
         </aside>
       </section>
       <div class="hd__inner960">
-        <section class="myPayment-body-header" id="myPayment-section1">
-          <div class="body-header">
-            <div>
-              <h3>안녕하세요. 마리아쥬스퀘어 관리자님</h3>
-              <div class="v-line"></div>
-              <div>
-                <p>신규 방문 예약</p>
-                <p><span>2</span>건</p>
-              </div>
-
-              <div class="v-line"></div>
-              <div>
-                <p>오늘 방문 일정</p>
-                <p><span>3</span>건</p>
-              </div>
-            </div>
-          </div>
-        </section>
         <!-- 2.헤더 설명 -->
         <section class="myPayment-header" id="myPayment-section2">
-          <h3>My 결제 내역</h3>
+          <h3>결제 내역</h3>
         </section>
         <!-- 3.서치 바 -->
         <div id="navibar-placeholder"></div>
 
-        <!--탭  -->
-
         <!-- 4.결제 내역  -->
         <section id="myPayment-section4">
-          <table class="table-myPayment">
-            <thead>
-              <tr>
-                <th></th>
-                <th>서비스 명</th>
-                <th>옵션 명(기본옵션)</th>
-                <th>진행상태</th>
-                <th>선입금</th>
-                <th>후입금</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr>
-                <td>
-                  <img src="../../assets/images/BestPackage1.png" alt="사진" />
-                </td>
-                <td>s스튜디오</td>
-                <td id="td-1">
-                  <ul>
-                    [웨딩촬영] 앨범 20P+기본 액자(20R)
-                    <li>수정본 데이터</li>
-                    <li>들러리 촬영</li>
-                    <li>야간씬 촬영</li>
-                  </ul>
-                </td>
-                <td>진행중</td>
-                <td>
-                  <ul>
-                    425,000원
-                    <li>165,000원</li>
-                    <li>150,000원</li>
-                    <li>110,000원</li>
-                  </ul>
-                </td>
-                <td>
-                  <ul>
-                    800,000
-                    <li>200,000원</li>
-                    <li>150,000원</li>
-                    <li>450,000원</li>
-                  </ul>
-                </td>
-              </tr>
-            </tbody>
-          </table>
+          <ul class="payment-total">
+            <li>
+              <div class="payment-body-top">
+                <dl>
+                  <dt awria-label="주문 날짜">결제 날짜</dt>
+                  <dd><span class=""> 2024.08.01</span></dd>
+                </dl>
+                <a href="paymentDetail.html" class="body-top-link">
+                  <span>결제 상세</span>
+                  <span> > </span>
+                </a>
+              </div>
+              <div class="payment-body-content">
+                <div class="payment-content1">
+                  <div class="payment-content1-1">
+                    <div class="payment-status">
+                      <span class="status-text">결제 완료</span>
+                    </div>
+                    <div class="payment-num">
+                      <span>결제 번호</span>
+                      <span class="payment-number">2818101</span>
+                    </div>
+                  </div>
+                  <div class="content1-brand">
+                    <span>로이 스튜디오 </span>
+                  </div>
+                </div>
+                <div class="payment-content2">
+                  <div class="content2-price">
+                    <span>금액</span>
+                    <span>\99,000</span>
+                  </div>
+                  <div class="content2-minus">-\29,700</div>
+                  <div class="content2-total">
+                    <span>합계</span>
+                    <div>\69,300</div>
+                  </div>
+                </div>
+                <div class="payment-content3">
+                  <div>
+                    <a>영수증</a>
+                  </div>
+                  <div>
+                    <a>거래명세서</a>
+                  </div>
+                </div>
+              </div>
+            </li>
+            <li>
+              <div class="payment-body-top">
+                <dl>
+                  <dt awria-label="주문 날짜">결제 날짜</dt>
+                  <dd><span class=""> 2024.07.31</span></dd>
+                </dl>
+
+                <a href="paymentDetail.html" class="body-top-link">
+                  <span>결제 상세</span>
+                  <span> > </span>
+                </a>
+              </div>
+              <div class="payment-body-content">
+                <div class="payment-content1">
+                  <div class="payment-content1-1">
+                    <div class="payment-status-cancle">
+                      <span class="status-text">결제 취소</span>
+                    </div>
+                    <div class="payment-num">
+                      <span>결제 번호</span>
+                      <span class="payment-number">2818101</span>
+                    </div>
+                  </div>
+                  <div class="content1-brand">
+                    <span>로사 스튜디오 </span>
+                  </div>
+                </div>
+                <div class="payment-content2">
+                  <div class="content2-price">
+                    <span>금액</span>
+                    <span>\99,000</span>
+                  </div>
+                  <div class="content2-minus">-\29,700</div>
+                  <div class="content2-total">
+                    <span>합계</span>
+                    <div>\69,300</div>
+                  </div>
+                </div>
+                <div class="payment-content3">
+                  <a>영수증</a>
+                  <a>거래명세서</a>
+                </div>
+              </div>
+            </li>
+          </ul>
         </section>
       </div>
     </div>
