feat: [FE] paymentDeetail

--- a/html/mypage/reservationDetail.html
+++ b/html/mypage/reservationDetail.html
@@ -17,7 +17,7 @@
       <script defer src="../../js/myPage/myPageMain.js"></script>
     </section>
 
-    <title>Document</title>
+    <title>reservationDetail</title>
   </head>
 
   <div id="header-placeholder"></div>
@@ -26,7 +26,7 @@
       <!-- 사이드 바 -->
       <div class="side-bar-flex">
         <section class="nav-bar" id="nav-bar">
-          <aside class="paymentVD">
+          <aside class="reservation-detail">
             <div id="myPage-sidebar-placeholder"></div>
           </aside>
         </section>
@@ -34,11 +34,11 @@
 
       <div class="hd__inner900">
         <!-- 1. body header-->
-        <section class="body-header" id="payment-detail-section1">
+        <section class="body-header" id="reservation-detail-section1">
         <h3>Reservation Details</h3>
         </section>
         <!-- 2. brand-filter -->
-        <section class="tabs" id="payment-detail-section2">
+        <section class="tabs" id="reservation-detail-section2">
             <div class="brand-filter">
                 <h3>[스튜디오] 스튜디오</h3>
                 <h3>[드레스] 드레스</h3>
