chore : [FE] design modify

--- a/html/mypage/paymentDetail.html
+++ b/html/mypage/paymentDetail.html
@@ -114,8 +114,8 @@
                     <td>네이버 페이</td>
                   </tr>
                   <tr>
-                    <th><a href="">영수증 확인</a></th>
-                    <td><a href="">거래명세서 확인</a></td>
+                    <th class="link"><a href="">영수증 확인</a></th>
+                    <td class="link"><a href="">거래명세서 확인</a></td>
                   </tr>
                 </tbody>
               </table>
