chore : [FE] 예약 페이지 디자인 수정

--- a/html/reservation/reservationSelectOptions.html
+++ b/html/reservation/reservationSelectOptions.html
@@ -18,7 +18,7 @@
             <h2 class="title-main">Reservation</h2>
         </section>
         <!-- 스텝 Bar -->
-        <section class="steps">
+        <!-- <section class="steps">
             <div class="steps-bar">
                 <div class="step active">Category</div>
                 <div class="step active">Store</div>
@@ -26,11 +26,11 @@
                 <div class="step">Date</div>
                 <div class="step">Total</div>
             </div>
-        </section>
+        </section> -->
 
         <!-- 안내 멘트 -->
         <section class="guide">
-            <h2 class="guide-step">Step.3</h2>
+            <h2 class="guide-step">Step.1</h2>
             <p class="guide-explain">
                 업체의 세부옵션을 선택해 주세요.
             </p>
@@ -42,7 +42,7 @@
                 <h1>[스튜디오] 빌링스 스튜디오</h1>
             </div>
             <div class="company-container">
-                <div>
+                <div class="img-container">
                     <img src="../../assets/images/reserve-studio-company.png" alt="업체 이미지">
                 </div>
                 <div class="company-info">
