feat : [FE] 견적함에 담기 버튼 추가

--- a/html/studio/studioDetail.html
+++ b/html/studio/studioDetail.html
@@ -142,7 +142,7 @@
             <!-- 3. 예식일정 현황-->
             <section class="schedule">
                 <div class="title-container">
-                    <h2>예식 일정 현황</h2>
+                    <h2>비마이스튜디오 상품 정보</h2>
                 </div>
 
                 <div class="schedule-container">
@@ -182,9 +182,7 @@
                             </div>
                         </div>
                         <a href="../../html/login/login.html">
-                            <button class="schedule-button">
-                                방문 상담 신청 하러가기
-                            </button>
+                            <button class="schedule-button">예약하기</button>
                         </a>
                     </div>
                 </div>
