fix : [FE] 파일명 재변경

--- a/html/estimate/estimateDetail.html
+++ b/html/estimate/estimateDetail.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Reservation Summary</title>
         <link rel="stylesheet" href="../../css/common/reset.css">
-        <link rel="stylesheet" href="../../css/estimate/estimate-detail.css">
+        <link rel="stylesheet" href="../../css/estimate/estimateDetail.css">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
         <script src="../../js/main/main.js"></script>
     </head>
@@ -13,14 +13,14 @@
         <div id="header-placeholder"></div>
         <div class="container">
         <div class="hd__inner1100">
-            <div class="banner">
-                <p class="bold">견적을 확인하고 싶은 업체를 선택해 주세요.</p>
-                <p>스드메 견적을 간편하게 확인할 수 있어요</p>
-            </div>  
-            <div class="tab">
-                <div class="tab-active">스튜디오</div>
-                <div class="tab-content">드레스</div>
-                <div class="tab-content">헤어메이크업</div>
+            <div class="container-title">
+                <p>Estimate</p>
+                <p class="description">원하는 조건의 스튜디오, 드레스 메이크업 업체를 조합해 가격을 알아봐요</p>
+            </div>
+            <div class="tabs">
+                <div class="tab">스튜디오</div>
+                <div class="tab">드레스</div>
+                <div class="tab">헤어메이크업</div>
             </div>
             <div class="main-grid">
                 <div class="left-panel">
@@ -109,9 +109,6 @@
                     <h2>선택하신 목록</h2>
                     <div class="list">
                         <div class="list-main">
-                            <div class="imgg">
-                                <img src="../../assets/images/estimate-detail2.png" alt="목록사진">
-                            </div>
                             <div class="pic-right">
                                 <div class="item-title">
                                     <span>S 스튜디오</span>
@@ -119,16 +116,16 @@
                                 </div>
                                 <div class="items">
                                     <div class="item">
-                                        <span>· 수정 데이터</span>
-                                        <span>165,000원</span>
+                                        <p><img src="../../assets/images/icon-minus.png" alt="">수정 데이터</p>
+                                        <p>165,000원</p>
                                     </div>
                                     <div class="item">
-                                        <span>· 플라리 촬영</span>
-                                        <span>155,000원</span>
+                                        <p><img src="../../assets/images/icon-minus.png" alt="">플라리 촬영</p>
+                                        <p>155,000원</p>
                                     </div>
                                     <div class="item">
-                                        <span>· 야간 촬영</span>
-                                        <span>110,000원</span>
+                                        <p><img src="../../assets/images/icon-minus.png" alt="">야간 촬영</p>
+                                        <p>110,000원</p>
                                     </div>
                                 </div>
                             </div>
