--- a/html/package/packageMain.html
+++ b/html/package/packageMain.html
@@ -5,10 +5,10 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>package-main</title>
         <link rel="stylesheet" href="../../css/common/reset.css" />
-        <link rel="stylesheet" href="../../css/package/package-main.css">
+        <link rel="stylesheet" href="../../css/package/packageMain.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/8.3.1/swiper-bundle.css">
         <script src="../../js/main/main.js"></script>
-        <script defer src="../../js/package/package-main.js"></script>
+        <script defer src="../../js/package/packageMain.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/8.3.1/swiper-bundle.min.js"></script>
     </head>
     <body>
@@ -97,9 +97,11 @@
                     </div>
                 </div>
             </div>
-                <div class="step-title">
-                    <div class="step-name">패키지 이용방법</div>
-                </div>
+
+            <!-- 이용방법 -->
+            <div class="step-title">
+                <div class="step-name">패키지 이용방법</div>
+            </div>
             <div class="step-title">
                 <p>전문가가 선택한 실패 없는 조합,</p>
                 <p>바쁜 예비 부부를 위한 빠르고 간편한 솔루션 이용방법</p>
@@ -126,7 +128,7 @@
                         <p>선택한 패키지 확인 후,<br>최종 혜택가로 결제해요.<br>결제 방법도 다양해요.</p>
                     </div>
                 </div>
-                <div class="step">
+                <div class="step-content">
                     <img src="../../assets/images/icon-document.png" alt="Step 4">
                     <div class="step-detail">
                         <p class="title">step4 서비스 이용</p>
@@ -134,8 +136,10 @@
                     </div>
                 </div>
             </div>
+
+            <!-- 패키지 -->
             <div class="packages">
-                <div class="pack-title">
+                <div class="package-title">
                     <div class="package-best">Best Package</div>
                     <div class="package-watch"><a href="../../html/Package/package-recommand.html">패키지 구경하기 →</a></div>
                 </div>
@@ -155,8 +159,8 @@
                         <h3>화보 속 그 패키지</h3>
                         <p>세미앙 + 모네뜨아르 + 제이와이</p>
                     </div>
-                    <div class="package">
-                        <img src="../../assets/images/best-package4.png" alt="Package 3">
+                    <div class="package-content">
+                        <img src="../../assets/images/best-package4.png" alt="Package 4">
                         <h3>화보 속 그 패키지</h3>
                         <p>페레스튜디오 + 안나스포사 + 빈헤어</p>
                     </div>
