--- a/html/package/packageRecommand.html
+++ b/html/package/packageRecommand.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>package recommand</title>
         <link rel="stylesheet" href="../../css/common/reset.css" />
-        <link rel="stylesheet" href="../../css/package/package-recommand.css">
+        <link rel="stylesheet" href="../../css/package/packageRecommand.css">
         <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/8.3.1/swiper-bundle.css"> -->
         <link rel="stylesheet" href="../../css/package/swiper.css">
         <link
@@ -13,7 +13,7 @@
             href="../../css/common/pagination/pagination.css"
         />
         <script src="../../js/main/main.js"></script>
-        <script defer src="../../js/package/package-main.js"></script>
+        <script defer src="../../js/package/packageMain.js"></script>
         <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/8.3.1/swiper-bundle.min.js"></script> -->
         <script src="../../js/package/swiper.js"></script>
         <script defer src="../../js/pagination/pagination.js"></script>
@@ -224,42 +224,42 @@
                     <div class="grid-bottom">
                         <div class="grid-content">
                             <div class="grid-pic">
-                                <img src="../../assets/images/BestPackage1.png" alt="">
+                                <img src="../../assets/images/bestPackage1.png" alt="">
                             </div>
                             <p class="name">라뮤즈(토탈)+브라이드벨라+비올</p>
                             <p class="cost">169만원</p>
                         </div>
                         <div class="grid-content">
                             <div class="grid-pic">
-                                <img src="../../assets/images/BestPackage2.png" alt="">
+                                <img src="../../assets/images/bestPackage2.png" alt="">
                             </div>
                             <p class="name">가을스튜디오+컬리트비+비올</p>
                             <p class="cost">179만원</p>
                         </div>
                         <div class="grid-content">
                             <div class="grid-pic">
-                                <img src="../../assets/images/BestPackage3.png" alt="">
+                                <img src="../../assets/images/bestPackage3.png" alt="">
                             </div>
                             <p class="name">메레스튜디오+레이첼+비올</p>
                             <p class="cost">190만원</p>
                         </div>
                         <div class="grid-content">
                             <div class="grid-pic">
-                                <img src="../../assets/images/BestPackage1.png" alt="">
+                                <img src="../../assets/images/bestPackage1.png" alt="">
                             </div>
                             <p class="name">ST정우(토탈)+디유드라포뎀+비올</p>
                             <p class="cost">210만원</p>
                         </div>
                         <div class="grid-content">
                             <div class="grid-pic">
-                                <img src="../../assets/images/BestPackage2.png" alt="">
+                                <img src="../../assets/images/bestPackage2.png" alt="">
                             </div>
                             <p class="name">원규+누벨드블랑+알루</p>
                             <p class="cost">245만원</p>
                         </div>
                         <div class="grid-content">
                             <div class="grid-pic">
-                                <img src="../../assets/images/BestPackage3.png" alt="">
+                                <img src="../../assets/images/bestPackage3.png" alt="">
                             </div>
                             <p class="name">아키스튜디오+모니카블랑쉬+알루</p>
                             <p class="cost">275만원</p>
