feat : [FE] 스드메 상세 페이지 추가

--- a/html/reservation/reservationPayment.html
+++ b/html/reservation/reservationPayment.html
@@ -16,17 +16,7 @@
             <div class="title-sub">원하는 스튜디오, 드레스, 메이크업 업체를 예약해보세요.</div>
             <div class="title-main">Reservation</div>
         </section>
-        <!-- 스텝 Bar -->
-        <section class="steps">
-            <div class="steps-bar">
-                <div class="step active">Category</div>
-                <div class="step active">Store</div>
-                <div class="step active">Option</div>
-                <div class="step active">Date</div>
-                <div class="step active">Total</div>
-            </div>
-        </section>
-
+        
         <!-- 1. 이용자 정보 -->
         <section class="user-info">
             <h1>1. 이용자 정보</h1>
@@ -205,7 +195,7 @@
 
 
         <!-- 3. 주문상품 -->
-         <section class="order-product">
+        <section class="order-product">
             <div class="order-title">
                 <h3>3. 주문상품</h3>
             </div>
@@ -229,7 +219,7 @@
                         <img src="../../assets/images/reserve-studio-company.png" alt="업체 이미지">
                     </div>
                     <div class="option-list">
-                        <h5>빌링스 스튜디오</h5>
+                        <h5>비마이 스튜디오</h5>
                         <h6>[웨딩촬영] 베이직</h6>
                         <p>앨범 1권(20P) + 기본 액자 1개</p>
                     </div>
@@ -242,7 +232,7 @@
                         <p>옵션</p>
                     </div>
                     <div class="option-img">
-                        <img src="../../assets/images/option1.png" alt="옵션 이미지">
+                        <img src="../../assets/images/option1.png" alt="옵션 이미지1">
                     </div>
                     <div class="option-list">
                         <h5>야간 촬영</h5>
@@ -257,7 +247,7 @@
                         <p>옵션</p>
                     </div>
                     <div class="option-img">
-                        <img src="../../assets/images/option2.png" alt="옵션 이미지">
+                        <img src="../../assets/images/option5.png" alt="옵션 이미지5">
                     </div>
                     <div class="option-list">
                         <h5>들러리 촬영</h5>
@@ -268,7 +258,21 @@
                     </div>
                 </div>
             </div>
-         </section>
+            <div class="price-container">
+                <div class="price-regular">
+                    <p>정상가</p>
+                    <p>1,140,000원</p>
+                </div>
+                <div class="discount">
+                    <p>쿠폰/옵션 할인가</p>
+                    <p>0원</p>
+                </div>
+                <div class="price-final">
+                    <p>최종 금액</p>
+                    <p>1,140,000원</p>
+                </div>
+            </div>
+        </section>
 
 
 
