--- a/html/dress/dressList.html
+++ b/html/dress/dressList.html
@@ -80,7 +80,7 @@
             <!-- 업체 리스트 부분  -->
             <section class="list-all">
                 <div class="card" data-id="1">
-                    <a href="../../html/makeup/makeupDetail.html">
+                    <a href="../../html/dress/dressDetail.html">
                         <img
                             src="../../assets/images/dress-1.jpg"
                             alt="드레스 이미지1"
