chore : [FE] different design in reservationList

--- a/html/mypage/mypage.html
+++ b/html/mypage/mypage.html
@@ -159,7 +159,7 @@
             <div class="sub-title-header">
               <div class="sub-title">현재 예약 현황</div>
               <div class="Reservation-mange-go">
-                <a href="reservationDetail.html">상세 예약 현황 바로가기>>></a>
+                <a href="../../html/myPage/reservationList.html">예약 현황 바로가기>>></a>
               </div>
             </div>
             <div class="category">웨딩 홀</div>
