--- a/html/mypage/reservationDetail.html
+++ b/html/mypage/reservationDetail.html
@@ -94,7 +94,7 @@
           <div>
             <ul class="option-tabs">
               <li class="option-tab">옵션 상세</li>
-              <li class="option-tab">교환 및 환불 안내</li>
+              <li class="option-tab"> 환불 안내</li>
             </ul>
           </div >
             <div class="option-information">옵션 정보</div>
@@ -152,7 +152,21 @@
             </div>
         </section>
         <div class="v-line"></div>
-        
+        <section class="refund-information" id="payment-detail-section5">
+          <div>
+            <h2>환불 안내</h2>
+            <ul>
+              <h3>환불 요청 기간</h3>
+              <li>예약일 기준 14일 이전: 전액 환불</li>
+              <li>예약일 기준 7일 이전: 50프로 환불</li>
+              <li>예약일 기준 3일 이내: 환불 불가</li>
+              <h3>환불 절차</h3>
+              <li>환불을 원하시는 경우, 결제 내역에서 환불하기 기능을 이용해 주시기 바랍니다.</li>
+              <h3>환불 처리 기간</h3>
+              <li>환불 요청 접수 후 7일 이내에 환불 절차가 진행됩니다. 환불 금액은 결제 시 사용하신 결제 수단으로 환불됩니다.</li>
+            </ul>
+          </div>
+        </section>
       </div>
     </div>
   </body>
