chore : [FE] js 추가

--- a/html/mypage/reservationList.html
+++ b/html/mypage/reservationList.html
@@ -15,6 +15,7 @@
     <section class="script">
       <script defer src="../../js/main/main.js"></script>
       <script defer src="../../js/myPage/myPageMain.js"></script>
+      <script defer src="../../js/myPage/reservationList.js"></script>
     </section>
   </head>
   <div id="header-placeholder"></div>
